compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__const_concat.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub const cute = \"cute\"\npub const cute_bee = cute <> \"bee\"\n\npub fn main() {\n  cute_bee\n}\n"
---
----- SOURCE CODE

pub const cute = "cute"
pub const cute_bee = cute <> "bee"

pub fn main() {
  cute_bee
}


----- COMPILED JAVASCRIPT
export const cute = "cute";

export const cute_bee = cute + "bee";

export function main() {
  return cute_bee;
}
