compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__const_concat_multiple.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub const cute = \"cute\"\npub const cute_bee = cute <> \"bee\"\npub const cute_cute_bee_buzz = cute <> cute_bee <> \"buzz\"\n\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
---
----- SOURCE CODE

pub const cute = "cute"
pub const cute_bee = cute <> "bee"
pub const cute_cute_bee_buzz = cute <> cute_bee <> "buzz"

pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED JAVASCRIPT
export const cute = "cute";

export const cute_bee = cute + "bee";

export const cute_cute_bee_buzz = cute + cute_bee + "buzz";

export function main() {
  return cute_cute_bee_buzz;
}
