compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__equality.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
---
----- SOURCE CODE

pub fn go(a) {
  a == "ok"
  a != "ok"
  a == a
}


----- COMPILED JAVASCRIPT
export function go(a) {
  a === "ok";
  a !== "ok";
  return a === a;
}
