compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__non_overlapping_sibling_string_prefix.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn classify(input: String, a: Bool, b: Bool) -> String {\n  case input {\n    \"aa\" <> _ if a -> \"aa\"\n    \"a\" <> _ if b -> \"a-guard\"\n    \"ac\" <> _ -> \"ac\"\n    _ -> \"other\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn classify(input: String, a: Bool, b: Bool) -> String {
  case input {
    "aa" <> _ if a -> "aa"
    "a" <> _ if b -> "a-guard"
    "ac" <> _ -> "ac"
    _ -> "other"
  }
}


----- COMPILED JAVASCRIPT
export function classify(input, a, b) {
  if (input.startsWith("aa")) {
    if (a) {
      return "aa";
    } else if (b) {
      return "a-guard";
    } else {
      return "other";
    }
  } else if (input.charCodeAt(0) === 97) {
    if (b) {
      return "a-guard";
    } else if (input.slice(1).charCodeAt(0) === 99) {
      return "ac";
    } else {
      return "other";
    }
  } else {
    return "other";
  }
}
