compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_concat.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go() {\n  \"Hello, \" <> \"Joe\"\n}\n"
---
----- SOURCE CODE

pub fn go() {
  "Hello, " <> "Joe"
}


----- COMPILED JAVASCRIPT
export function go() {
  return "Hello, " + "Joe";
}
