compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_literal_dependent_bit_array_falls_through_to_prefix.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(input: String, bits: BitArray) -> Int {\n  case input, bits {\n    \"ab\", <<length, _:bytes-size(length)>> -> 1\n    \"a\" <> _, _ -> 2\n    _, _ -> 3\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(input: String, bits: BitArray) -> Int {
  case input, bits {
    "ab", <<length, _:bytes-size(length)>> -> 1
    "a" <> _, _ -> 2
    _, _ -> 3
  }
}


----- COMPILED JAVASCRIPT
export function go(input, bits) {
  if (input === "ab") {
    if (bits.bitSize >= 8) {
      let length = bits.byteAt(0);
      if (bits.bitSize === 8 + length * 8) {
        let length$1 = length;
        return 1;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else if (input.charCodeAt(0) === 97) {
    return 2;
  } else {
    return 3;
  }
}
