compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_literal_guard_falls_through_to_prefix.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(input: String, x: Int) -> Int {\n  case input, x {\n    \"ab\", y if y > 4 -> 1\n    \"a\" <> _, _ -> 400\n    _, _ -> 999\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(input: String, x: Int) -> Int {
  case input, x {
    "ab", y if y > 4 -> 1
    "a" <> _, _ -> 400
    _, _ -> 999
  }
}


----- COMPILED JAVASCRIPT
export function go(input, x) {
  if (input === "ab") {
    let y = x;
    if (y > 4) {
      return 1;
    } else {
      return 400;
    }
  } else if (input.charCodeAt(0) === 97) {
    return 400;
  } else {
    return 999;
  }
}
