compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__strings__string_literals.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go() {\n  \"Hello, Gleam!\"\n}\n"
---
----- SOURCE CODE

pub fn go() {
  "Hello, Gleam!"
}


----- COMPILED JAVASCRIPT
export function go() {
  return "Hello, Gleam!";
}
